--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,43 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="300dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
-            android:id="@+id/frameLayout" android:visibility="gone">
-
-        <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="300dp" app:srcCompat="@drawable/ca" android:id="@+id/imageViewOrigin"
-                android:scaleType="matrix"/>
-        <com.example.imageselectframetest.CustomView.CutViewCircle
-                android:layout_width="match_parent"
-                android:layout_height="300dp" tools:srcCompat="@tools:sample/avatars"
-                android:id="@+id/imageView2"/>
-    </FrameLayout>
     <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/imageViewCut"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-    />
+            tools:layout_editor_absoluteY="8dp"/>
     <Button
-            android:text="@android:string/cut"
+            android:text="Select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/Btn_Cut"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewCut" app:layout_constraintHorizontal_bias="0.117"/>
-    <Button
-            android:text="CutCircle"
-            android:layout_width="74dp"
-            android:layout_height="42dp" android:layout_marginRight="60dp"
-            android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/Btn_Cut2"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewCut" app:layout_constraintVertical_bias="0.0"/>
+            android:id="@+id/Btn_Select"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewCut" android:layout_marginTop="12dp"/>
 </android.support.constraint.ConstraintLayout>
